--- a/src/app/timesheet-modules/timesheet-user-modules/timesheet/timesheet-week-view/timesheet-mission-bar/timesheet-mission-bar.component.scss
+++ b/src/app/timesheet-modules/timesheet-user-modules/timesheet/timesheet-week-view/timesheet-mission-bar/timesheet-mission-bar.component.scss
@@ -1,9 +1,9 @@
 
-@import '../../../../../../variables';
+@import '../../../../../../styles/variables';
 
 .mission-bar{
     border-radius:4px!important;
     height:100%;
-    padding:$gap-size-unit * 0.5px!important; 
+    padding:$gap-size * 0.5px!important; 
     text-align:center;
 }
