--- a/src/app/shared/components/selectable-card/selectable-card.component.scss
+++ b/src/app/shared/components/selectable-card/selectable-card.component.scss
@@ -1,8 +1,8 @@
-@import '../../../../variables';
+@import '../../../../styles/variables';
 
 .container {
     position:relative;
-    margin:$gap-size-unit  * .25px;
+    margin:$gap-size  * .25px;
     touch-action: auto!important;
   }
 
