fix notification styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,10 @@
 @import './variables';
 @import './app-animations.scss';
 @import './spacing.scss';
+//Dev only imports (remove for prod, lazily loaded)
+@import './lazy-styles/ag-grid.scss';
+@import './lazy-styles/owl-date-time.scss';
+@import './lazy-styles/mat-styles.scss';
 
 @include gap-units($gap-size);
 
@@ -152,11 +156,18 @@ a {
 
 .image_viewer_dialog .mat-dialog-container{background-color:black!important;}
 
-.notification{
+.notification-error{
   margin-bottom:$bottom-nav-height + $gap-size * 2px!important;
-  color:black;
+  @extend .bg-warn;
 }
-
+.notification-success{
+  margin-bottom:$bottom-nav-height + $gap-size * 2px!important;
+  @extend .bg-success;
+}
+.notification-warn{
+  margin-bottom:$bottom-nav-height + $gap-size * 2px!important;
+  @extend .bg-accent;
+}
 .ellipsis{
   white-space: nowrap;
   overflow: hidden;
