--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -1,43 +1,6 @@
+<app-password-form-view
+    [error]="serverError"
+    (formSubmitted)="onSubmit($event)">
+</app-password-form-view>
 
 
-<mat-card class="app-card">
-  <mat-card-header class="mb-2">Endre passord</mat-card-header>
-
-  <mat-card-content>
-    <form *ngIf="passwordForm" [formGroup]="passwordForm" fxLayout="column">
-      <mat-form-field>
-          <input matInput placeholder="Nåværende passord" formControlName="oldPassword" [type]="hidePasswords.curr ? 'password' : 'text'" >
-          <mat-icon matSuffix (click)="hidePasswords.curr = !hidePasswords.curr">
-            {{hidePasswords.curr ? 'visibility_off' : 'visibility'}}
-          </mat-icon>
-      </mat-form-field>
-    
-      <mat-form-field>
-        <input matInput placeholder="Nytt passord" formControlName="password" [type]="hidePasswords.new ? 'password' : 'text'">
-        <mat-icon matSuffix (click)="hidePasswords.new = !hidePasswords.new">
-          {{hidePasswords.new ? 'visibility_off' : 'visibility'}}
-        </mat-icon>
-        <mat-error *ngIf="this.password.invalid">
-          Passord må være på minst 7 tegn.
-        </mat-error>
-      </mat-form-field>
-    
-      <mat-form-field>
-        <input matInput placeholder="Gjenta nytt passord" formControlName="confirmPassword" [type]="hidePasswords.confirm ? 'password' : 'text'">
-        <mat-icon matSuffix (click)="hidePasswords.confirm = !hidePasswords.confirm">
-          {{hidePasswords.confirm ? 'visibility_off' : 'visibility'}}
-        </mat-icon>
-      </mat-form-field>
-      <mat-error *ngIf="this.error">
-        {{ this.error }}
-      </mat-error>
-      <br />
-
-      <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
-        [disabled]="passwordForm.invalid || passwordForm.pristine"
-        (click)="onSubmit()">
-        Lagre   
-      </button>
-    </form>
-  </mat-card-content>
-</mat-card>
