remove mat card & tabs

--- a/src/app/users/user-list/user-card/user-card.component.html
+++ b/src/app/users/user-list/user-card/user-card.component.html
@@ -1,17 +1,15 @@
-<mat-card class="app-card mb-1">
-    <mat-card-content fxLayout="row" fxLayoutAlign="space-between center">
-        
-        <mat-icon class="mr-2">{{ (user.role == Roles.Oppdragsgiver) ? 'work' : 'person' }}</mat-icon>
+<div class="app-card mb-1 p-3" fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-icon class="mr-2">{{ (user.role == Roles.Oppdragsgiver) ? 'work' : 'person' }}</mat-icon>
 
-        <span class="ellipsis mr-auto">
-            <span class="mat-h4">{{ user.firstName }} {{ user.lastName }}</span><br />
-            <mat-hint *ngIf="user.employer">{{ user.employer.name }}</mat-hint>
-        </span>
+    <span class="ellipsis mr-auto">
+        <span class="mat-h4">{{ user.firstName }} {{ user.lastName }}</span><br />
+        <mat-hint *ngIf="user.employer">{{ user.employer.name }}</mat-hint>
+    </span>
 
-        <span>
-            <a *ngIf="user.phoneNumber" class="color-success" mat-icon-button href="tel:{{ user.phoneNumber }}"><mat-icon>phone</mat-icon></a>
-            <app-icon-button *ngIf="editButton && user.role != Roles.Leder" [config]="editButton"></app-icon-button>
-        </span>
- 
-    </mat-card-content>
-</mat-card>
+    <span>
+        <a *ngIf="user.phoneNumber" class="color-success" mat-icon-button href="tel:{{ user.phoneNumber }}">
+            <mat-icon>phone</mat-icon>
+        </a>
+        <app-icon-button *ngIf="editButton && user.role != Roles.Leder" [config]="editButton"></app-icon-button>
+    </span>
+</div>
