--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,9 +3,9 @@
 @import './app-animations.scss';
 @import './spacing.scss';
 //Dev only imports (remove for prod, lazily loaded)
-@import './lazy-styles/ag-grid.scss';
-@import './lazy-styles/owl-date-time.scss';
-@import './lazy-styles/mat-styles.scss';
+// @import './lazy-styles/ag-grid.scss';
+// @import './lazy-styles/owl-date-time.scss';
+// @import './lazy-styles/mat-styles.scss';
 
 @include gap-units($gap-size);
 
