list card text moved to ngcontent

--- a/src/app/mission-modules/mission/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission-modules/mission/mission-details/mission-details-view/mission-details-view.component.html
@@ -14,11 +14,11 @@
     </a>
   </div>
 
-  <app-list-card text="Bilder" startIcon="photo_library" [routerLink]="['/oppdrag', vm.mission.id, 'bilder']">
+  <app-list-card startIcon="photo_library" [routerLink]="['/oppdrag', vm.mission.id, 'bilder']">Bilder
   </app-list-card>
-  <app-list-card text="Dokumenter" startIcon="folder" [routerLink]="['/oppdrag', vm.mission.id, 'dokumenter']">
+  <app-list-card startIcon="folder" [routerLink]="['/oppdrag', vm.mission.id, 'dokumenter']">Dokumenter
   </app-list-card>
-  <app-list-card text="Notater" startIcon="rate_review" [routerLink]="['/oppdrag', vm.mission.id, 'notater']">
+  <app-list-card startIcon="rate_review" [routerLink]="['/oppdrag', vm.mission.id, 'notater']">Notater
   </app-list-card>
 
 
