--- a/src/app/profile/settings/settings.component.html
+++ b/src/app/profile/settings/settings.component.html
@@ -1,10 +1,10 @@
 <div class="p-2">
-    <app-list-card appAddToHomeScreen text="Legg til app" startIcon="get_app"></app-list-card>
+    <app-list-card appAddToHomeScreen startIcon="get_app"></app-list-card>Legg til app
 
-    <app-list-card text="Synkroniser manuelt" startIcon="update" (click)="refresh()">
+    <app-list-card startIcon="update" (click)="refresh()">Synkroniser manuelt
     </app-list-card>
 
-    <app-list-card text="Slett lokal data" startIcon="delete_sweep" (click)="confirmPurge()">
+    <app-list-card startIcon="delete_sweep" (click)="confirmPurge()">Slett lokal data
     </app-list-card>
 
     <div class="app-card mt-1 p-3">
