--- a/src/app/shared-app/components/list-card/list-card.component.html
+++ b/src/app/shared-app/components/list-card/list-card.component.html
@@ -1,7 +1,9 @@
 <div fxLayout="row" fxLayoutAlign="space-between center" [ngClass]="panelClass" class="app-card mb-1 p-3 ellipsis mat-elevation-z2" matRipple>  
     <mat-icon class="mr-2">{{ startIcon }}</mat-icon>
     <span class="ellipsis mr-auto" fxFlex>
-        {{ text }}
+        <ng-content>
+
+        </ng-content>
     </span>
     <mat-icon>{{ endIcon }}</mat-icon> 
 </div>
