--- a/src/app/mission-modules/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission-modules/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -8,7 +8,7 @@
 
     <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex>
         <app-list-card *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" 
-            startIcon="home_work" [endIcon]="mission.finished ? 'check':'chevron_right'"
+            [config]="{startIcon:'home_work', endIcon: mission.finished ? 'check':'chevron_right'}" 
             [routerLink]="['/oppdrag', mission.id, 'detaljer']">{{'(' + mission.id + ') ' + mission.address}}
         </app-list-card>
     </cdk-virtual-scroll-viewport>
