--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,9 +1,9 @@
 <div class="p-2 max-width">
-  <app-list-card startIcon="account_circle" (click)="updateProfile()">Oppdater profil
+  <app-list-card [config]="{startIcon:'account_circle'}" (click)="updateProfile()">Oppdater profil
   </app-list-card>
-  <app-list-card startIcon="vpn_key" (click)="updatePassword()">Oppdater passord
+  <app-list-card [config]="{startIcon:'vpn_key'}" (click)="updatePassword()">Oppdater passord
   </app-list-card>
-  <app-list-card startIcon="settings" [routerLink]="['/profil/innstillinger']">Innstillinger
+  <app-list-card [config]="{startIcon:'settings'}" [routerLink]="['/profil/innstillinger']">Innstillinger
   </app-list-card>
-  <app-list-card appAddToHomeScreen startIcon="get_app">Legg til app</app-list-card>
+  <app-list-card appAddToHomeScreen [config]="{startIcon:'get_app'}">Legg til app</app-list-card>
 </div>
