--- a/src/app/timesheet-modules/shared-timesheet/components/timesheet-filter/timesheet-filter.component.html
+++ b/src/app/timesheet-modules/shared-timesheet/components/timesheet-filter/timesheet-filter.component.html
@@ -66,12 +66,12 @@
           </button>
         </mat-form-field>
 
-        <owl-date-time [pickerType]="'calendar'" #customDateRange></owl-date-time>
+        <owl-date-time pickerType="calendar" #customDateRange></owl-date-time>
       </ng-container>
       
       <ng-container *ngIf="customMonthSelect.checked">
         <mat-form-field style="width:164px">
-          <input matInput  placeholder="Velg måned" selectMode="range" 
+          <input matInput  placeholder="Velg måned" selectMode="range"
             [owlDateTimeTrigger]="customMonth" [owlDateTime]="customMonth" 
             [(ngModel)]="filterPreset.dateRange">
           <button mat-button *ngIf="filterPreset.dateRange" matSuffix mat-icon-button aria-label="Lukk" (click)="filterPreset.dateRange=null">
@@ -79,7 +79,7 @@
           </button>
         </mat-form-field>
   
-        <owl-date-time [pickerType]="'calendar'" [startView]="'multi-years'" 
+        <owl-date-time pickerType="calendar"  startView="year"
           (monthSelected)="chosenMonthHandler($event, customMonth)" #customMonth>
         </owl-date-time>
       </ng-container>
