--- a/src/app/timesheet-modules/timesheet-user-modules/timesheet-form/timesheet-form/timesheet-form-view/timesheet-form-view.component.html
+++ b/src/app/timesheet-modules/timesheet-user-modules/timesheet-form/timesheet-form/timesheet-form-view/timesheet-form-view.component.html
@@ -17,7 +17,7 @@
         <input matInput placeholder="Dato" formControlName="date" aria-label="Velg dato" required
           [owlDateTimeTrigger]="d3" [owlDateTime]="d3">
       </mat-form-field>
-      <owl-date-time [pickerType]="'calendar'" #d3></owl-date-time>
+      <owl-date-time pickerType="calendar" start #d3></owl-date-time>
     </label>
 
     <label fxFlex=46>
@@ -25,7 +25,7 @@
         <input matInput placeholder="Arbeidstid" formControlName="timeRange" required selectMode="range"
           [owlDateTimeTrigger]="t1" [owlDateTime]="t1">
       </mat-form-field>
-      <owl-date-time [pickerType]="'timer'"  stepMinute="15" [startAt]="timesheet?.startTime || initTime" #t1>
+      <owl-date-time pickerType="timer"  stepMinute="15" [startAt]="timesheet?.startTime || initTime" #t1>
       </owl-date-time>
     </label>
   </span>
