--- a/src/app/mission-modules/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission-modules/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,7 +1,7 @@
 <div class="h-100 pl-2 pr-2 max-width" style="overflow:hidden" fxLayout="column" fxLayoutAlign="start stretch">
      
     <input appInputListener (inputChanged)="onSearch($event)"
-        placeholder="Søk med adresse eller id" class="mt-2 mb-2 p-2 pl-3 mat-elevation-z2 fadeInDown"
+        placeholder="Søk med adresse eller id" [value]="searchInput || ''" class="mt-2 mb-2 p-2 pl-3 mat-elevation-z2 fadeInDown"
         style="background:white;border:none;border-radius:10px;"> 
 
     <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
