--- a/src/app/profile/settings/app-config-form/app-config-form.component.html
+++ b/src/app/profile/settings/app-config-form/app-config-form.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="settingsForm && appConfig" [formGroup]="settingsForm" fxLayout="column">
+<form *ngIf="settingsForm && syncConfig" [formGroup]="settingsForm" fxLayout="column">
 
   <mat-form-field>
     <input matInput placeholder="Synkroniseringstid i minutter" type="tel" formControlName="syncRefreshTime" required>
