--- a/src/app/profile/settings/settings.component.html
+++ b/src/app/profile/settings/settings.component.html
@@ -7,6 +7,6 @@
 
     <div class="app-card mt-1 p-3">
         <div class="mb-2">Konfigurasjon</div>
-        <app-app-config-form [appConfig]="appConfig$ | async" (formSubmitted)="updateAppConfig($event)"></app-app-config-form>
+        <app-app-config-form [syncConfig]="syncConfig$ | async" (formSubmitted)="updateSyncConfig($event)"></app-app-config-form>
     </div>
 </div>
