get roles from enum, rolesubject removed

--- a/src/app/users/components/user-form/user-form.component.html
+++ b/src/app/users/components/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <app-user-form-view
   [user]="user$ | async"
-  [roles]="roles$ | async"
+  [roles]="roles"
   [employers]="employers$ | async"
   (formSubmitted)="onSubmit($event)">
 </app-user-form-view>
