--- a/src/app/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
+++ b/src/app/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
@@ -66,7 +66,7 @@
   </span>
 
   <span class="bottom-list">
-    <mat-divider></mat-divider>
+    <mat-divider class="mid-divider"></mat-divider>
     <a matRipple (click)="navItemClick()" [routerLink]="['/profil']" [routerLinkActive]="['active']">
       <mat-icon>person</mat-icon>
       <span>Profil</span>
