replace custom csv export with ag grid export ...

--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -14,7 +14,7 @@
         </button>  
     </span>
 
-    <app-timesheet-statistic-table class="mat-elevation-z2" fxFlex
+    <app-timesheet-statistic-table #statTable class="mat-elevation-z2" fxFlex
         [timesheetSummaries]="timesheetSummaries$ | async">
     </app-timesheet-statistic-table>
 
