formatting grid csv export

--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic-table/timesheet-statistic-table.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic-table/timesheet-statistic-table.component.html
@@ -6,5 +6,6 @@
     overlayNoRowsTemplate="Tomt"
     (modelUpdated)="autoSizeGrid()"
     [rowData]="rowData"
-    [columnDefs]="columnDefs">
+    [columnDefs]="columnDefs"
+    [allowContextMenuWithControlKey]>
 </ag-grid-angular>
