--- a/src/app/shared-app/components/notification/notification.component.html
+++ b/src/app/shared-app/components/notification/notification.component.html
@@ -1,5 +1,8 @@
 <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
     <mat-icon>{{data.icon}}</mat-icon>
-    <span>{{ data.message }}</span>
+    <span *ngIf="data.title">{{ data.title }}</span>
+    <div *ngFor="let detail of data.details">
+        {{ detail }}
+    </div>
 </span>
 
