fix error handling for new server errors

--- a/src/app/shared-app/components/notification/notification.component.html
+++ b/src/app/shared-app/components/notification/notification.component.html
@@ -1,8 +1,12 @@
-<span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+<span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-1">
     <mat-icon>{{data.icon}}</mat-icon>
     <span *ngIf="data.title">{{ data.title }}</span>
-    <div *ngFor="let detail of data.details">
+</span>
+<ng-container *ngFor="let detail of data.details">
+    <mat-divider></mat-divider>
+    <div class="mt-1">
         {{ detail }}
     </div>
-</span>
+</ng-container>
+
 
