--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -1,13 +1,12 @@
 <mat-sidenav-container class="bg-background h-100" *ngIf="config$ | async; let config">
 
-  <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4 bg-primary" 
+  <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4 bg-primary" style="max-width:250px;min-width:200px"
     [attr.role]="config.isXs ? 'dialog' : 'navigation'"
     [mode]="config.isXs ? 'over' : 'side'"
     [opened]="!config.isXs">
     <app-main-side-nav-content 
       [user]="config.currentUser" 
-      (navItemClicked)="toggleDrawer(config.isXs)"
-      (hasLoggedOut)="handleLogout()">
+      (navItemClicked)="toggleDrawer(config.isXs)">
     </app-main-side-nav-content>
   </mat-sidenav>
   
